# ros2_learners

./: .gitignore  LICENSE  README.md
Libraries_for_robotics/: README.md  ompl  opencv.py  pcl  pcl.cpp  pytorch.py
Libraries_for_robotics/champ_libraries_integration/: CMakeLists.txt  package.xml
Libraries_for_robotics/champ_libraries_integration/src/: opencv_pytorch.py  pcl_ompl.cpp
Libraries_for_robotics/test/: ompl.cpp  opencv.py  pytorch.py
ai_assitance/: README.md  package.xml  setup.cfg  setup.py
ai_assitance/ai_assitance/: circle_motion.py  obstacle_avoidence.py
ai_assitance/launch/: gazebo_bringup.launch.py
ai_assitance/urdf/: dolly.urdf
navigation_/: CMakeLists.txt  installations.md  package.xml
navigation_/config/: tb3_map.pgm  tb3_map.yaml
navigation_/launch/: mapping.launch.py  navigation.launch.py
navigation_/src/: pub_occupancy_grid.cpp
navigation_tb3/: CMakeLists.txt  README.md  package.xml
navigation_tb3/config/: mapping.rviz  tb3_nav2_params.yaml
navigation_tb3/launch/: mapping.launch.py  navigation.launch.py
navigation_tb3/scripts/: multi_waypoints.py  single_goal_nav.py
nodes/: CMakeLists.txt  README.md  package.xml
nodes/config/: image_map.yaml  map_server_params.yaml
nodes/launch/: map_launch.py  nodes.launch.py
nodes/src/: laser_publisher.cpp  publisher.cpp  subscriber.cpp
point_cloud_perception/: CMakeLists.txt  README.md  package.xml
point_cloud_perception/launch/: 3d_depth_mapping_rtab.launch.py  rtab_mapping.launch.py
point_cloud_perception/src/: clustering.cpp  planner_seg.cpp  test_node.cpp  voxelizing.cpp
resources/: README.md  commands.md
robot_math/: README.md  package.xml  setup.cfg  setup.py
robot_math/robot_math/: andular_velocity.py  gtg.py
transforms/: CMakeLists.txt  README.md  package.xml
transforms/config/: urdf_view.rviz
transforms/launch/: gazebo.launch.py  rviz.launch.py
transforms/src/: frame_chains.cpp  rotation_frame.cpp  static_dynamic_frame.cpp  transform_order.cpp  translation_frame.cpp
transforms/urdf/: diff_drive.urdf
turtlebot3_gazebo/: README.md
turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
turtlebot3_gazebo/urdf/: turtlebot3_waffle.urdf
